--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -10,6 +10,7 @@ jobs:
   Deuxieme_Job:
     name: Deuxieme-Job
     runs-on: ubuntu-latest
+    needs: Premier_Job
     steps:
       - run: echo "deuxieme job"
       - run: echo "fin 2"
